# spgd-epo

./: main.py  pyproject.toml
conf/: config.yaml
conf/data/: mpax.yaml  test.yaml
conf/model/: linear.yaml  mlp.yaml  predopt_knapsack_linear.yaml
conf/problem/: pyepo_knapsack.yaml
picard_epo/models/: mlp.py
picard_epo/problems/: knapsack.py  problem.py  utils.py
